syntax = "proto3";

package harmonic;

service Harmonic {
  rpc HarmonizeClientInitiateSync (ClientSyncState) returns (ServerSyncStateResponse);
  rpc HarmonizeSynchronizeState (stream FileSync) returns (stream FileSync);
}

enum FileType {
  OTHER = 0;
  MARKDOWN = 1;
  PDF = 2;
}

enum UpdateStrategy {
  SKIP = 0;
  SERVER_SEND = 1;
  CLIENT_SEND = 2;
}

message ClientSyncState {
  string sync_uuid = 1;
  int64 timestamp_last_sync_micro = 2;
  repeated FileStatus status_list = 3;
}

message FileStatus {
  string path = 1;
  int64 timestamp_micro = 2;
  FileType file_type = 3;
  bytes hash = 4;
}

message ServerSyncStateResponse {
  string sync_uuid = 1;
  int64 timestamp_micro = 2;
  repeated StrategyPerFile strategy = 3;
}

message StrategyPerFile {
  string path = 1;
  UpdateStrategy strategy = 2;
}

message StatusResponse {
  int64 timestamp_micro = 1;
  UpdateStrategy strategy = 2;
}

message FileSync {
  string sync_uuid = 1;
  string path = 2;
  bytes chunk = 3;
  uint64 offset = 4;
  bool is_final = 5;
  uint64 file_size = 6;
}